# ehl

./: CMakeLists.txt  README.md  ehl.hpp
examples/: CMakeLists.txt  cflags.cmake  quadratic_root.cpp
include/ehl/: ehl.hpp
